--- a/LEGOdudes_webshop/index_cart.html
+++ b/LEGOdudes_webshop/index_cart.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legodudes webshop</title>
-    <link href="styles.css" rel="stylesheet" media="all">
+    <link href="styles_cart.css" rel="stylesheet" media="all">
     <script src="shopscript.js" defer></script>
     <script src="legodudes.js"></script>
 </head>
 <body>
     <div id="content">
+        <section id="cart">
+            <h3>Din handlevogn</h3>
+            <div id="cart-products">
+                <article class="cart-product">
+                    <span class="title">Dragon Zane</span>
+                    <span class="price">89,-</span>
+                    <span class="quantity">x<span class="quantity-number">1</span></span>
+                    <button class="delete">x</button>
+                </article>
+                <article class="cart-product">
+                    <span class="title">Master Wu MMM MMMMM MMMMMM mMm MMMMMMM MMMMMMM</span>
+                    <span class="price">999,-</span>
+                    <span class="quantity">x<span class="quantity-number">9</span></span>
+                    <button class="delete">x</button>
+                </article>
+                <article class="cart-product">
+                    <span class="title">Vengestone Warrior</span>
+                    <span class="price">89,-</span>
+                    <span class="quantity">x<span class="quantity-number">3</span></span>
+                    <button class="delete">x</button>
+                </article>
+            </div>
+            <p>Totalt: Kr. <span id="cart-total">99999</span>,-</p>
+        </section>
         <header>
             <a href="index.html" id="logo"><img src="website_images/LD_logo.svg" alt="Legodudes" /></a>
             <button id="shoppingcart">
@@ -85,6 +109,5 @@
             <p>2025 &copy; Legodudes</p>
         </footer>
     </div>
-    
 </body>
 </html>
